# dbus-fast

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  build.py  build_ext.py  pyproject.toml  setup.py
.claude/skills/pr-workflow/: SKILL.md
.github/actions/poetry-install/: action.yml
.github/workflows/: big_endian.yml  ci.yml  labels.yml  pr-title.yml  wheels.yml
bench/: marshall.py  unmarshall.py  unmarshall_2.py  unmarshall_getmanagedobjects.py  unmarshall_interfaces_added.py  unmarshall_interfaces_removed.py  unmarshall_manufacturerdata.py  unmarshall_passive.py  unmarshall_properties_changed.py  unmarshall_servicedata.py  unmarshall_write_value.py  unpack_getmanagedobjects_variants.py  unpack_variants.py
docs/: requirements.txt
docs/source/: Makefile  authentication.rst  conf.py  constants.rst  errors.rst  index.md  index.rst  installation.md  installation.rst  introspection.rst  usage.md  validators.rst
docs/source/high-level-client/: aio-proxy-interface.rst  aio-proxy-object.rst  base-proxy-interface.rst  base-proxy-object.rst  glib-proxy-interface.rst  glib-proxy-object.rst  index.rst
docs/source/high-level-service/: index.rst  optional-members.rst  service-interface.rst
examples/: aio-list-names.py  aio-tcp-notification.py  dbus-next-send.py  example-service.py  glib-list-names.py  mpris.py
scripts/: run_test_qemu.sh
src/dbus_fast/: __init__.py  __version__.py  annotations.py  auth.py  constants.py  errors.py  introspection.py  message.pxd  message.py  message_bus.pxd  message_bus.py  proxy_object.py  send_reply.py  service.pxd  service.py  signature.pxd  signature.py  unpack.pxd  unpack.py  validators.py
tests/: conftest.py  test_address_parser.py  test_aio_big_message.py  test_aio_low_level.py  test_aio_multi_flags.py  test_annotations.py  test_auth.py  test_auth_readline.py  test_big_message.py  test_constants.py  test_disconnect.py  test_errors.py  test_fd_passing.py  test_glib_auth_line_source.py  test_glib_big_message.py  test_glib_low_level.py  test_introspection.py  test_main.py  test_marshaller.py  test_message.py  test_message_bus.py  test_message_reader.py  test_proxy_object.py  test_request_name.py  test_send_reply.py  test_service.py  test_signature.py  test_signature_removal.py  test_tcp_address.py  test_unpack_variants.py  test_util.py  test_validators.py  util.py
tests/benchmarks/: test_dispatch.py  test_marshall.py  test_unmarshall.py  test_unpack.py
tests/client/: test_aio.py  test_methods.py  test_properties.py  test_signals.py
tests/data/: get_managed_objects.hex  messages.json  sloppy-introspection.xml  strict-introspection.xml
tests/service/: test_add_property.py  test_decorator_signatures.py  test_decorators.py  test_disabled_callable.py  test_export.py  test_method_metadata_kwargs.py  test_methods.py  test_properties.py  test_signals.py  test_standard_interfaces.py
(+29 files in other folders)
